fixed pixel jump for form-select in table-fake in pagekit CSS fixed sortable empty height in uikit admin theme

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -228,6 +228,12 @@
 
 .pk-table-fake .uk-sortable-handle { display: block; }
 
+/*
+ * Fix height
+ */
+
+.pk-table-fake .uk-form-select { vertical-align: top; }
+
 
 /* `pk-padding-horizontal-remove`
 ========================================================================== */
