--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -7310,7 +7310,7 @@ a.uk-datepicker-table-muted {
  * The style of an empty list
  ========================================================================== */
 .uk-sortable-empty {
-  min-height: 50px;
+  min-height: 39px;
   border: 1px dashed #ddd;
 }
 /* Sub-object `uk-sortable-handle`
@@ -7609,6 +7609,12 @@ a.uk-datepicker-table-muted {
 }
 .pk-table-fake .uk-sortable-handle {
   display: block;
+}
+/*
+ * Fix height
+ */
+.pk-table-fake .uk-form-select {
+  vertical-align: top;
 }
 /* `pk-padding-horizontal-remove`
 ========================================================================== */
