--- a/extensions/system/theme/less/uikit/addons/sortable.less
+++ b/extensions/system/theme/less/uikit/addons/sortable.less
@@ -15,7 +15,7 @@
 
 @sortable-placeholder-border:                   #99baca;
 
-@sortable-empty-height:                         50px;
+@sortable-empty-height:                         39px;
 
 @sortable-handle-icon:                          "";
 
